add approximateRewardPerBlock
